--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -4,57 +4,109 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<!-- Main -->
-<div id="main">
-    <div class="inner">
+<div class="wrapper">
+    <div class="container">
+        <div class="row">
 
-        <!-- Header -->
-        <header id="header">
-            <div class="logo">
-                <a href="/Admin">Thư Viện Số</a>
-            </div>
-        </header>
-        <section class="services">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
-                        <a href="/Admin/Scan">
-                            <div class="service-item first-item">
-                                <div class="icon"></div>
-                                <h4>QUÉT VĂN BẢN</h4>
-                                <p>Kết nối máy quét và chuyển đổi tài liệu bản cứng thành bản số</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="/Admin/Scan">
-                            <div class="service-item second-item">
-                                <div class="icon"></div>
-                                <h4>QUẢN LÝ THƯ VIỆN ĐIỆN TỬ</h4>
-                                <p>Tạo ra CSDL, tìm kiếm và quản lí thư viện điện tử</p>
-                            </div>
+            <!--/.span3-->
+            <div class="span12">
+                <div class="content">
+                    <div class="btn-controls">
+                        <div class="btn-box-row row-fluid">
+                            <a href="#" class="btn-box big span4">
+                                <i class=" icon-random"></i><b>65%</b>
+                                <p class="text-muted">
+                                    Growth
+                                </p>
+                            </a><a href="#" class="btn-box big span4">
+                                <i class="icon-user"></i><b>15</b>
+                                <p class="text-muted">
+                                    New Users
+                                </p>
+                            </a><a href="#" class="btn-box big span4">
+                                <i class="icon-money"></i><b>15,152</b>
+                                <p class="text-muted">
+                                    Profit
+                                </p>
                             </a>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="/Admin/Scan">
-                            <div class="service-item first-item">
-                                <div class="icon"></div>
-                                <h4>QUÉT VĂN BẢN</h4>
-                                <p>Kết nối máy quét và chuyển đổi tài liệu bản cứng thành bản số</p>
+                        </div>
+                        <div class="btn-box-row row-fluid">
+                            <div class="span8">
+                                <div class="row-fluid">
+                                    <div class="span12">
+                                        <a href="#" class="btn-box small span4">
+                                            <i class="icon-envelope"></i><b>Messages</b>
+                                        </a><a href="#" class="btn-box small span4">
+                                            <i class="icon-group"></i><b>Clients</b>
+                                        </a><a href="#" class="btn-box small span4">
+                                            <i class="icon-exchange"></i><b>Expenses</b>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row-fluid">
+                                    <div class="span12">
+                                        <a href="#" class="btn-box small span4">
+                                            <i class="icon-save"></i><b>Total Sales</b>
+                                        </a><a href="#" class="btn-box small span4">
+                                            <i class="icon-bullhorn"></i><b>Social Feed</b>
+                                        </a><a href="#" class="btn-box small span4">
+                                            <i class="icon-sort-down"></i><b>
+                                                Bounce
+                                                Rate
+                                            </b>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
+                            <ul class="widget widget-usage unstyled span4">
+                                <li>
+                                    <p>
+                                        <strong>Windows 8</strong> <span class="pull-right small muted">78%</span>
+                                    </p>
+                                    <div class="progress tight">
+                                        <div class="bar" style="width: 78%;">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Mac</strong> <span class="pull-right small muted">56%</span>
+                                    </p>
+                                    <div class="progress tight">
+                                        <div class="bar bar-success" style="width: 56%;">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Linux</strong> <span class="pull-right small muted">44%</span>
+                                    </p>
+                                    <div class="progress tight">
+                                        <div class="bar bar-warning" style="width: 44%;">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>iPhone</strong> <span class="pull-right small muted">67%</span>
+                                    </p>
+                                    <div class="progress tight">
+                                        <div class="bar bar-danger" style="width: 67%;">
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <a href="/Admin/Scan">
-                            <div class="service-item second-item">
-                                <div class="icon"></div>
-                                <h4>QUẢN LÝ THƯ VIỆN ĐIỆN TỬ</h4>
-                                <p>Tạo ra CSDL, tìm kiếm và quản lí thư viện điện tử</p>
-                            </div>
-                        </a>
-                    </div>
+
+
+
+
                 </div>
+                <!--/.content-->
             </div>
-        </section>
+            <!--/.span9-->
+        </div>
     </div>
+    <!--/.container-->
 </div>
